--- a/RN/Ayo/package.json
+++ b/RN/Ayo/package.json
@@ -18,11 +18,13 @@
     "react-dom": "^16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-gesture-handler": "^1.8.0",
+    "react-native-photo-upload": "^1.3.0",
     "react-native-screens": "^2.18.1",
     "react-native-web": "^0.15.0",
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "expo-image-picker": "~9.2.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
