--- a/RN/Ayo/package.json
+++ b/RN/Ayo/package.json
@@ -13,7 +13,7 @@
     "@react-navigation/stack": "^5.14.3",
     "axios": "^0.21.1",
     "expo": "~40.0.0",
-    "expo-image-picker": "~9.2.0",
+    "expo-image-picker": "^9.2.1",
     "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
     "react-dom": "^16.13.1",
@@ -22,6 +22,7 @@
     "react-native-photo-upload": "^1.3.0",
     "react-native-screens": "^2.18.1",
     "react-native-web": "^0.15.0",
+    "react-phone-number-input": "^3.1.18",
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5"
