--- a/RN/Ayo/package.json
+++ b/RN/Ayo/package.json
@@ -8,18 +8,18 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@expo/vector-icons": "^12.0.4",
+    "@expo/vector-icons": "^12.0.0",
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
     "axios": "^0.21.1",
     "expo": "~40.0.0",
-    "expo-image-picker": "^9.2.1",
+    "expo-image-picker": "~9.2.0",
     "expo-status-bar": "~1.0.3",
     "json2formdata": "^1.0.4",
     "react": "16.13.1",
     "react-dom": "^16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
-    "react-native-gesture-handler": "^1.8.0",
+    "react-native-gesture-handler": "^1.10.3",
     "react-native-photo-upload": "^1.3.0",
     "react-native-screens": "^2.18.1",
     "react-native-web": "^0.15.0",
