--- a/RN/Ayo/package.json
+++ b/RN/Ayo/package.json
@@ -14,14 +14,18 @@
     "axios": "^0.21.1",
     "expo": "~40.0.0",
     "expo-image-picker": "^9.2.1",
+    "expo-location": "~10.0.0",
     "expo-status-bar": "~1.0.3",
     "json2formdata": "^1.0.4",
     "react": "16.13.1",
     "react-dom": "^16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-google-place-picker": "^1.2.1",
+    "react-native-location": "^2.5.0",
     "react-native-photo-upload": "^1.3.0",
     "react-native-screens": "^2.18.1",
+    "react-native-searchable-dropdown": "^1.1.3",
     "react-native-web": "^0.15.0",
     "react-phone-number-input": "^3.1.18",
     "react-redux": "^7.2.3",
