--- a/RN/Ayo/package.json
+++ b/RN/Ayo/package.json
@@ -9,13 +9,13 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^12.0.0",
-    "@react-navigation/native": "^5.9.3",
-    "@react-navigation/stack": "^5.14.3",
+    "@react-navigation/native": "^5.9.4",
+    "@react-navigation/stack": "^5.14.4",
     "axios": "^0.21.1",
     "expo": "~40.0.0",
     "expo-image-picker": "^9.2.1",
     "expo-location": "~10.0.0",
-    "expo-status-bar": "~1.0.3",
+    "expo-status-bar": "^1.0.4",
     "json2formdata": "^1.0.4",
     "react": "16.13.1",
     "react-dom": "^16.13.1",
@@ -26,8 +26,8 @@
     "react-native-photo-upload": "^1.3.0",
     "react-native-screens": "^2.18.1",
     "react-native-searchable-dropdown": "^1.1.3",
-    "react-native-web": "^0.15.0",
-    "react-phone-number-input": "^3.1.18",
+    "react-native-web": "^0.15.7",
+    "react-phone-number-input": "^3.1.19",
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5"
