--- a/RN/Ayo/package.json
+++ b/RN/Ayo/package.json
@@ -20,12 +20,14 @@
     "react": "16.13.1",
     "react-dom": "^16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-dropdown-picker": "^4.0.9",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-google-place-picker": "^1.2.1",
     "react-native-location": "^2.5.0",
     "react-native-photo-upload": "^1.3.0",
     "react-native-screens": "^2.18.1",
     "react-native-searchable-dropdown": "^1.1.3",
+    "react-native-vector-icons": "^8.1.0",
     "react-native-web": "^0.15.7",
     "react-phone-number-input": "^3.1.19",
     "react-redux": "^7.2.3",
