--- a/RN/Ayo/package.json
+++ b/RN/Ayo/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^12.0.0",
+    "@react-native-picker/picker": "1.9.2",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
     "axios": "^0.21.1",
@@ -25,6 +26,7 @@
     "react-native-google-place-picker": "^1.2.1",
     "react-native-location": "^2.5.0",
     "react-native-photo-upload": "^1.3.0",
+    "react-native-picker-select": "^8.0.4",
     "react-native-screens": "^2.18.1",
     "react-native-searchable-dropdown": "^1.1.3",
     "react-native-vector-icons": "^8.1.0",
@@ -32,7 +34,8 @@
     "react-phone-number-input": "^3.1.19",
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "symbol-observable": "^4.0.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
